Java 17 / sonar improvements (#3392)
* java 17 / sonar improvements

* ignore duplication in sonar

* undo because sonar complaints about duplications

* checkstyle fixes

---------

Co-authored-by: Andrei Trushkov <andrei.trushkov@hmcts.net>